--- a/microprobe_app/mainwindow.ui
+++ b/microprobe_app/mainwindow.ui
@@ -440,8 +440,8 @@
    <widget class="QGroupBox" name="groupBox_4">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>280</y>
+      <x>260</x>
+      <y>330</y>
       <width>591</width>
       <height>281</height>
      </rect>
@@ -566,10 +566,10 @@
       </rect>
      </property>
      <property name="text">
-      <string>PID</string>
+      <string>Preset</string>
      </property>
      <property name="checked">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_21">
@@ -583,22 +583,6 @@
      </property>
      <property name="text">
       <string>Reel back</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="checkBox_5">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>60</y>
-       <width>91</width>
-       <height>24</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Use preset</string>
-     </property>
-     <property name="checked">
-      <bool>false</bool>
      </property>
     </widget>
    </widget>
@@ -819,9 +803,9 @@
    <widget class="QGroupBox" name="groupBox_6">
     <property name="geometry">
      <rect>
-      <x>820</x>
+      <x>860</x>
       <y>280</y>
-      <width>311</width>
+      <width>271</width>
       <height>131</height>
      </rect>
     </property>
@@ -881,64 +865,12 @@
      </property>
     </widget>
    </widget>
-   <widget class="QGroupBox" name="groupBox_3">
-    <property name="geometry">
-     <rect>
-      <x>860</x>
-      <y>450</y>
-      <width>120</width>
-      <height>151</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>Quick scripts</string>
-    </property>
-    <widget class="QPushButton" name="pushButton_22">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>101</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Script 1</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_23">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>70</y>
-       <width>101</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Script 2</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_24">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>110</y>
-       <width>101</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Script 3</string>
-     </property>
-    </widget>
-   </widget>
    <widget class="QGroupBox" name="groupBox_7">
     <property name="geometry">
      <rect>
       <x>20</x>
       <y>430</y>
-      <width>181</width>
+      <width>231</width>
       <height>181</height>
      </rect>
     </property>
@@ -948,7 +880,7 @@
     <widget class="QLineEdit" name="lineEdit_17">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>50</x>
        <y>50</y>
        <width>41</width>
        <height>22</height>
@@ -961,8 +893,8 @@
     <widget class="QLineEdit" name="lineEdit_18">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>50</y>
+       <x>50</x>
+       <y>80</y>
        <width>41</width>
        <height>22</height>
       </rect>
@@ -974,7 +906,7 @@
     <widget class="QLineEdit" name="lineEdit_19">
      <property name="geometry">
       <rect>
-       <x>130</x>
+       <x>100</x>
        <y>50</y>
        <width>41</width>
        <height>22</height>
@@ -987,8 +919,8 @@
     <widget class="QCheckBox" name="checkBox_3">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>90</y>
+       <x>10</x>
+       <y>120</y>
        <width>76</width>
        <height>20</height>
       </rect>
@@ -1003,8 +935,8 @@
     <widget class="QCheckBox" name="checkBox_4">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>90</y>
+       <x>90</x>
+       <y>120</y>
        <width>76</width>
        <height>20</height>
       </rect>
@@ -1017,7 +949,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>50</y>
        <width>49</width>
        <height>16</height>
       </rect>
@@ -1029,8 +961,8 @@
     <widget class="QLabel" name="label_21">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>30</y>
+       <x>10</x>
+       <y>80</y>
        <width>49</width>
        <height>16</height>
       </rect>
@@ -1042,7 +974,7 @@
     <widget class="QLabel" name="label_22">
      <property name="geometry">
       <rect>
-       <x>130</x>
+       <x>100</x>
        <y>30</y>
        <width>49</width>
        <height>16</height>
@@ -1055,8 +987,8 @@
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>120</y>
+       <x>150</x>
+       <y>50</y>
        <width>75</width>
        <height>51</height>
       </rect>
@@ -1068,7 +1000,7 @@
     <widget class="QPushButton" name="pushButton_6">
      <property name="geometry">
       <rect>
-       <x>100</x>
+       <x>150</x>
        <y>120</y>
        <width>75</width>
        <height>51</height>
@@ -1076,6 +1008,35 @@
      </property>
      <property name="text">
       <string>Reset</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_20">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>80</y>
+       <width>41</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>150</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_23">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>30</y>
+       <width>49</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Time</string>
      </property>
     </widget>
    </widget>
